@startuml Diagrama de class Três

class Conexao {
    -localhost: str
    -usuario: str
    -senha: str
    -banco: str
    #conexao: mysql
    --
    #conexao()
    +construct()
}

class HorasTrabalhadas{
    -id: int
    -numeroHoras: int
    -salarioDesejado: double
    -valorHora: double
    -valorTotalHoras: double
    --
    +getters()
    +setters()
    +construct()
    +inserir()
}

class CustosVariaveis {
    -id: int
    -totalParcial: double
    -embalagem: array<double,int>
    -cartoes: array<double,int>
    -etiquetas: array<double,int>
    -frete: array<double,int>
    -outros: array<double,int>
    -valorTotal: double
    --
    +getters()
    +setters()
    +construct()
    +inserirESetId()
}

class CustosFixos {
    -id: int
    -aluguel: double
    -agua: double
    -luz: double
    -telefone: double
    -internet: double
    -iptu: double
    -valorOutros: double
    -valorParcial: double
    -pecasProduzidasMes: int
    -valorTotal: double
    --
    +getters()
    +setters()
    +construct()
    +inserir()
}

class CustosFixosOutro{
    -id: int
    -idCustosFixos: int
    -custoFixo: str
    -valor: double
    --
    +getters()
    +setters()
    +construct()
    +inserir()
}

class Material {
    -id: int
    -idCustosVariaveis: int
    -material: str
    -valor: double
    -quantidadePecas: int
    -valorTotalMaterial: double
    --
    +getters()
    +setters()
    +construct()
    +inserir()
}

class Venda {
    -id: int
    -idCustosVariaveis: int
    -idHorasTrabalhadas: int
    -idCustosFixos: int
    -idUsuario: int
    -totalParcial: double
    -margemLucro: int
    -valorLucro: int
    -despesaComercializacao: int
    -valorDespesa: double
    -valorTotal: double
    --
    +getters()
    +setters()
    +construct()
    +consultarTotalParcial()
    +calcularLucro()
    +calcularDespesa()
    +calcularTotalVenda()
    +inserir()
}

class Usuario {
    -id: int
    -nome: str
    -login: str
    -senha: str
    -email: str
    -estado: str
    -municipio: str
    -endereco: str
    -perfil: str
    --
    +getters()
    +setters()
    +login()
    +cadastrar()
    +construct()
}

Conexao "1..1" <|-up- "1..*" CustosFixos
Conexao "1..1" <|-left- "1..*" HorasTrabalhadas
Conexao "1..1" <|-left- "1..*" CustosVariaveis
Conexao "1..1" <|-left- "1..*" Venda
Conexao "1..1" <|-- "1..*" Material
Conexao "1..1" <|-Right- "1..*" CustosFixosOutro
CustosFixos "1..1" *--> "1..*" CustosFixosOutro
CustosVariaveis "1..1" *--> "1..*" Material
Venda "1..1" <--* "1..1" CustosVariaveis
Venda "1..1" <--* "1..1" HorasTrabalhadas
Venda "1..1" <--* "1..1" CustosFixos
Usuario "1..1" *-left-> "1..*" Venda

@enduml